@@ -7,6 +7,7 @@ USER-VISIBLE CHANGES:
 - Modified money displays to keep them from overflowing. (Phil)
 * Suspicion loss is now quadratic; different groups "forget" quicker.
   (Phil, Ticho for the suggestion)
+* There are now restrictions on the building of items. (emh)
 
 v0.23a (released 2006.03.08):
 
